# cver

./: .gitignore  README.md
ai_server/: CMakeLists.txt  server.cpp
ai_server/cfg/: system.yaml
ai_server/include/: commonTools.h  objDetect.h  systemCfgTool.h
ai_server/src/: commonTools.cpp  objDetect.cpp  systemCfgTool.cpp
yolov5ForBudDetection/: mutil_gpu.txt
yolov5ForBudDetection/datasets/: path.txt
yolov5ForBudDetection/yolov5/: train.py
yolov5ForBudDetection/yolov5/data/: Cigarret.yaml
yolov5ForBudDetection/yolov5/runs/train/exp/: events.out.tfevents.1688883342.demo.5325.0  opt.yaml
